# libproperties

./: .gitattributes  .gitignore  CMakeLists.txt  NAME  README.md  buf.c  buf.h  build.sh  conanfile.py  hash_map.c  hash_map.h  libproperties.premake  libproperties.pri  libproperties.pro  libproperties.sln  libproperties.vcxproj  libproperties.vcxproj.filters  libproperties_test.premake  properties.c  properties.h  properties_test.c  strstore.c  strstore.h  test.sh
.github/workflows/: ci.yml
test/: 1.properties  1.properties.expect  1.properties.j.expect  2.properties  2.properties.j.expect  Main.java  compare_java.cmake  generate_java_output.sh  test.sh
test/java-standard/src/: Main.java
